fixed background overflow

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -17,7 +17,7 @@
   src: url("/fonts/PlayfairDisplay/PlayfairDisplay-Regular.ttf");
 }
 
-html, body, .root, .page {
+html, body, #root, .page {
   height: 100%;
 }
 
@@ -30,6 +30,16 @@ body {
 .page {
   &--nonPublic {
     background-color: $page-background-color;
-    padding-bottom: 30px;
+
+    & > div {
+      padding-bottom: 80px;
+      background-color: $page-background-color;
+
+      @media (min-width: $tablet-min-width) {
+        & {
+          padding-bottom: 100px;
+        }
+      }
+    }
   }
 }
